Added metadata to context
