# src/CapabilityService.WebApi/Infrastructure/Api/DTOs/Context.cs
@@ -6,5 +6,8 @@ namespace DFDS.CapabilityService.WebApi.Infrastructure.Api.DTOs
     {
         public Guid Id { get; set; }
         public string Name { get; set; }
+        public string AWSAccountId { get; set; }
+        public string AWSRoleArn { get; set; }
+        public string AWSRoleEmail { get; set; }
     }
 }
